[package]
name = "garden-rs"
version = "0.1.0"
authors = ["Vlad Onis <vladonis.biz+opensource@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32c3-hal = "0.15.0"
esp-backtrace = { version = "0.11.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32c3"] }
thiserror-no-std = "2.0.2"
embedded-hal  = { version = "0.2.7", features = ["unproven"] }
embedded-hal-1 = { version = "1.0.0", package = "embedded-hal" }
embedded-hal-nb = "1.0.0"


