[package]
name = "embassy-control"
version = "0.1.0"
authors = ["Vlad Onis <vladonis.biz+opensource@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32c3"] }
thiserror-no-std = "2.0.2"
esp-hal = { version = "0.16.0", features = ["esp32c3", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
smoltcp = { version = "0.11.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.27.0", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
static_cell = { version = "2.0.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }

embassy-executor = { version = "0.5.0", features = ["nightly"]}
embassy-time = { version = "0.3.0", features = ["generic-queue-8"]}
embassy-net = { version = "0.4.0", features = ["proto-ipv6", "proto-ipv4", "medium-ethernet", "tcp", "dhcpv4"] }
esp-wifi        = { version = "0.4.0", features = ["esp32c3", "wifi-logs", "wifi", "utils", "wifi-default", "embassy-net"] }









[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
